CSS/style.css
:root {
  --brand-color: #b65f10;
  --hover-color: #b85b09;
  --font-main: Robotto, sans-serif;
  --font-display: Dancing Script;
}

body {
  background-color: #fff;
  margin: 0;
  padding: 0;
  font-family: var(--font-main);
}

body.modal-open {
  overflow: hidden;
  height: 100vh;
  position: fixed;
  width: 100%;
}

/* Dropdown */
.hamburger {
  display: none;
  background: none;
  font-size: 28px;
  border: none;
  color: white;
  cursor: pointer;
}

/* Header */
header {
  position: relative;
  height:fit-content;
  background: url("../images/hero-bg2_3.webp") center/cover no-repeat;
  color: #fff;
}

/* Navbar */
.navbar {
  display: flex;
  padding: 10px;
  justify-content: center;
  gap: 20px;
}
.nav-logo-text{
  display:none;
}
.nav-list {
  display: flex;
  list-style: none;
  gap: 2rem;
  font-family: var(--font-display);
  font-size: 1.5rem;
}

/* Search */
#searchInput {
  display:block;
  padding: 5px;
  width: 250px;
  border-radius: 50px;
  border: 1px solid #ccc;
  background-color: rgba(255, 255, 255, 0.3);
  color: #fff;
  position: relative;
  top: -10px;
}

#searchInput::placeholder,
#searchInput:focus {
  color: rgba(255,255,255,0.5);
}

#searchInput:focus {
  outline: none;
  border: 2px solid #ccc;
}

.search-wrapper {
  position: relative;
  display: inline-block;
  z-index: 2;
}

#clearSearch {
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-90%);
  border: none;
  background: transparent;
  cursor: pointer;
  display: none;
  z-index: 10;
}

#clearSearch svg {
  color: #fff;
  pointer-events: none;
}

#clearSearch:hover svg {
  color: #333;
}
.search-icon{
  display: none;
}

/* Hero Section */
.hero-section-main {
  display: flex;
  margin-top: 20px;
}

.hero-left-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hero-logo-text {
  width: 80%;
}

.hero-subtext {
  font-family: var(--font-display);
  font-size: 1.5rem;
  text-align: center;
}

.order-cta {
  border: none;
  padding: 10px 15px;
  color: #fff;
  background-color: #603809;
  border-radius: 10px;
  width: 30%;
  margin-bottom: 10px;
}

.order-cta a {
  text-decoration: none;
  color: inherit;
}

.hero-cup-image {
  width: 25%;
  height: 25%;
  position: relative;
  top: -55px;
  left: -25px;
}

/* Menu Section */
.Menu {
  padding: 20px;
}

.Menu h1, .Menu h2 {
  font-family: var(--font-display);
  margin: 10px 0;
}

section h1 {
  text-align:center;
  font-size: 4rem;
  margin-top: 20px;
}

.Menu h2 {
  text-align:left;
  font-size: 3rem;
}

.Menu hr {
  border: none;
  height: 5px;
  background-color: var(--brand-color);
  width: 170px;
  margin: 0 auto 20px;
}

.menu-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  gap: 20px;
  padding: 20px;
  max-width: 1200px;
  margin: 0 auto;
}

.product-display-section {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  margin-bottom: 50px;
}

.no-results {
  display: none;
  text-align: left;
  padding: 0.5rem;
  margin-top: 40px;
}

/* Menu Card */
.menu-card {
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  text-align: center;
  transition: transform 0.2s;
  width: 30%;
  max-width: 400px;
  min-height: 350px;
  content-visibility: auto;
}

.menu-card:hover {
  transform: translateY(-5px);
}

.product-image {
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.menu-card h3 {
  margin: 0;
  padding: 15px 10px;
  background-color: #f4f4f4;
  color: #333;
}

.description {
  margin: 10px 0;
  padding: 0 15px;
  color: #555;
  position: relative;
  max-height: 4.5em;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  cursor: pointer;
  transition: max-height 0.3s ease;
}

.description.expanded {
  max-height: none;
  -webkit-line-clamp: unset;
  overflow: visible;
}

.menu-card .price {
  font-size: 1.2rem;
  color: var(--brand-color);
  margin: 10px 0;
}

.menu-card button {
  padding: 10px 15px;
  margin-bottom: 25px;
  border: none;
  border-radius: 5px;
  background-color: var(--brand-color);
  color: white;
  font-size: 1rem;
  cursor: pointer;
  transition: background-color 0.3s;
  width: 100px;
}

.menu-card button:hover {
  background-color: var(--hover-color);
}

/* Footer */
.footer {
  width: 100%;
  background: url(../images/footer-bg.webp) center / cover no-repeat;
  color: white;
  display: flex;
  gap: 10px;
  padding: 10px;
  font-family: var(--font-display);
  border-top-left-radius: 15px;
  border-top-right-radius: 25px;
}

.flex-item {
  text-align: left;
  list-style: none;
  padding-left: 40px;
  margin-top:50px;
  margin-bottom:50px;
  font-size: 1.5rem;
  justify-content: center;
}
.first-flex-item{
  width:50%;
}
.footer-logo-text{
  width:70%;
  margin-bottom:30px;
  margin-top: 50px;
}
.flex-item ul {
  list-style: none;
  padding: 0;  
}
.flex-list{
  display:flex;
}
.footer-list :first-child{
  margin-bottom:30px;
  font-weight: bold;
}

/* Social Icons */
.social-icons {
  display: flex;
  gap: 15px;
  padding: 0;
  justify-content: left;
}

.social-icons li {
  display: inline-block;
}

.social-icons a {
  color: white;
  font-size: 24px;
  transition: color 0.3s;
  text-decoration: none;
}

.social-icons a:hover {
  color: grey;
}

/* Responsive */
@media (max-width: 1024px) {
 .modal-wrapper {
    width: 85%;
 }
}

@media (max-width: 720px) {
  .navbar {
    justify-content: right;
    padding: 10px;
  }
  #searchInput {
    display:none;
  }
  .search-icon{
    display: block;
  }
  .hamburger {
    display: block;
  }
  .nav-list {
    display: none;
    position: absolute;
    top: 60px;
    right: 16px;
    flex-direction: column;
    background: #884805;
    padding: 10px 20px;
    border-radius: 8px;
  }
  .nav-list.show {
    display: flex;
    z-index:2;
  }
  .nav-links li {
    margin: 10px 0;
  }
  #searchInput {
    width: 150px;
    top: 0px;
  }
  .hero-section-main {
   margin-top: 10px; 
  }
  .hero-logo-text{
    width:70%;
  }
  .hero-subtext {
    font-size: 1rem;
    width:70%
  }  
  .order-cta {
    width: 50%;
     transform: translateY(-10px)
  }
  .hero-cup-image {
    top: -20px;
  }
  .Menu h1 {
    font-size: 3rem;
  }

  .Menu h2 {
    font-size: 2.3rem;
  }

  .menu-card {
    width: 45%;
  }
  .footer{
    flex-direction: column;
  } 
  .footer-logo-text{
    margin-top: 50px;
    margin-bottom: 15px;
    width: 80%;
  }
  .flex-list{
   display: none;
  }
  .first-flex-item{
    width:100%;
  }

}


@media (max-width: 420px){
  .nav-logo-text{
    display:block;
    width: 30vw;
    position: absolute;
    left: 10px;
  }
  .search-icon{
    display: block;
  }
  #searchInput {
    width: 140px;
    right:-10px;
  }
  .hero-logo-text {
    display: none;
 }
  .hero-cup-image {
  display: none;
  }
 .menu-card {
    width: 95%;
  }
}

